; ModuleID = '/home/carl/AnghaBench/linux/drivers/virt/extr_fsl_hypervisor.c_fsl_hv_poll.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/virt/extr_fsl_hypervisor.c_fsl_hv_poll.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.file = type { %struct.doorbell_queue* }
%struct.doorbell_queue = type { i64, i64, i32, i32 }
%struct.poll_table_struct = type { i32 }

@EPOLLIN = common dso_local global i32 0, align 4
@EPOLLRDNORM = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.file*, %struct.poll_table_struct*)* @fsl_hv_poll to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @fsl_hv_poll(%struct.file* %0, %struct.poll_table_struct* %1) #0 {
  %3 = alloca %struct.file*, align 8
  %4 = alloca %struct.poll_table_struct*, align 8
  %5 = alloca %struct.doorbell_queue*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i32, align 4
  store %struct.file* %0, %struct.file** %3, align 8
  store %struct.poll_table_struct* %1, %struct.poll_table_struct** %4, align 8
  %8 = load %struct.file*, %struct.file** %3, align 8
  %9 = getelementptr inbounds %struct.file, %struct.file* %8, i32 0, i32 0
  %10 = load %struct.doorbell_queue*, %struct.doorbell_queue** %9, align 8
  store %struct.doorbell_queue* %10, %struct.doorbell_queue** %5, align 8
  %11 = load %struct.doorbell_queue*, %struct.doorbell_queue** %5, align 8
  %12 = getelementptr inbounds %struct.doorbell_queue, %struct.doorbell_queue* %11, i32 0, i32 2
  %13 = load i64, i64* %6, align 8
  %14 = call i32 @spin_lock_irqsave(i32* %12, i64 %13)
  %15 = load %struct.file*, %struct.file** %3, align 8
  %16 = load %struct.doorbell_queue*, %struct.doorbell_queue** %5, align 8
  %17 = getelementptr inbounds %struct.doorbell_queue, %struct.doorbell_queue* %16, i32 0, i32 3
  %18 = load %struct.poll_table_struct*, %struct.poll_table_struct** %4, align 8
  %19 = call i32 @poll_wait(%struct.file* %15, i32* %17, %struct.poll_table_struct* %18)
  %20 = load %struct.doorbell_queue*, %struct.doorbell_queue** %5, align 8
  %21 = getelementptr inbounds %struct.doorbell_queue, %struct.doorbell_queue* %20, i32 0, i32 0
  %22 = load i64, i64* %21, align 8
  %23 = load %struct.doorbell_queue*, %struct.doorbell_queue** %5, align 8
  %24 = getelementptr inbounds %struct.doorbell_queue, %struct.doorbell_queue* %23, i32 0, i32 1
  %25 = load i64, i64* %24, align 8
  %26 = icmp eq i64 %22, %25
  br i1 %26, label %27, label %28

27:                                               ; preds = %2
  br label %32

28:                                               ; preds = %2
  %29 = load i32, i32* @EPOLLIN, align 4
  %30 = load i32, i32* @EPOLLRDNORM, align 4
  %31 = or i32 %29, %30
  br label %32

32:                                               ; preds = %28, %27
  %33 = phi i32 [ 0, %27 ], [ %31, %28 ]
  store i32 %33, i32* %7, align 4
  %34 = load %struct.doorbell_queue*, %struct.doorbell_queue** %5, align 8
  %35 = getelementptr inbounds %struct.doorbell_queue, %struct.doorbell_queue* %34, i32 0, i32 2
  %36 = load i64, i64* %6, align 8
  %37 = call i32 @spin_unlock_irqrestore(i32* %35, i64 %36)
  %38 = load i32, i32* %7, align 4
  ret i32 %38
}

declare dso_local i32 @spin_lock_irqsave(i32*, i64) #1

declare dso_local i32 @poll_wait(%struct.file*, i32*, %struct.poll_table_struct*) #1

declare dso_local i32 @spin_unlock_irqrestore(i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
